Angular Login Project

--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -1,1 +1,23 @@
-<p>navbar works!</p>
+<mat-toolbar color="primary">
+    <mat-toolbar-row>
+       
+        <span><a mat-icon-button routerLink="/">
+            ShopsyinG</a></span>
+
+    <span class="example-spacer"></span>
+    <a mat-icon-button routerLink="/login">Login</a>
+    &nbsp;&nbsp;&nbsp;
+    <a mat-icon-button routerLink="/signup">Signup</a>
+    </mat-toolbar-row> 
+
+    <!-- <div class="container md">
+        <mat-toolbar-row >
+            
+            <span><a routerLink="/aboutUs"><span>AboutUs</span></a>
+            <span class="example-spacer"></span>
+                <a routerLink="/facebook"><span>Facebook</span></a>
+                <a routerLink="/Whatsapp"><span>Whatsapp</span></a>
+            </span>
+        </mat-toolbar-row>
+    </div> -->
+    </mat-toolbar>
