--- a/src/app/component/forgot-password/forgot-password.component.html
+++ b/src/app/component/forgot-password/forgot-password.component.html
@@ -1,1 +1,25 @@
-<p>forgot-password works!</p>
+<div class="container mt">
+  <div class="container text-center marginals">
+
+    <h2>Please Enter your registered username or emailId here!!!</h2>
+
+
+    <div class="container text-center marginals">
+      <form action="">
+        <mat-form-field class="full-width" apperance="outline">
+            <mat-label>Username or EmailId</mat-label>
+            <input required type="text" matInput />
+        </mat-form-field>
+
+        <div class="container "> 
+          <button mat-raised-button>
+            <a routerLink="/signup">Submit</a>
+          </button>
+        </div>
+        
+    </form>
+    </div>
+  </div>
+
+
+</div>
