--- a/src/app/component/forgot-username/forgot-username.component.html
+++ b/src/app/component/forgot-username/forgot-username.component.html
@@ -1,1 +1,19 @@
-<p>forgot-username works!</p>
+
+<div class="container">
+    
+    <div class="container text-center marginals">
+        <form action="">
+            <!-- <img style="width: 1328px; height: 1080px" src="/assets/nature-y.jpg" alt=""> -->
+          <mat-form-field class="full-width" apperance="outline">
+              <mat-label>Mobile No.</mat-label>
+              <input required maxlength="10" type="text" matInput />
+          </mat-form-field>
+
+          <div class="container mt">
+            <button mat-raised-button><a routerLink="/login">Submit</a></button>
+          </div>
+          
+    </form>
+</div>
+</div>
+
