--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -10,34 +10,50 @@
             <h1><b>Welcome to Login Page!!!!!</b></h1>
             
     </div>
-     <form action="">
+     <form (ngSubmit)="onSubmit()">
         <div class="col-sm">
             <mat-form-field class="full-width" appearance="outline"> 
                 <mat-label>Username</mat-label>
-                <input required type="text" matInput />
+                <input 
+                name="username"
+                [(ngModel)]="credentials.username"
+                required maxlength="7" type="text" matInput />
             </mat-form-field>
         </div>
     
-    <mat-form-field class="full-width" appearance="outline"> 
-        <mat-label>Password</mat-label>
-        <input required minlength="7" type="password" matInput />
-    </mat-form-field>
+            <mat-form-field class="full-width" appearance="outline"> 
+                <mat-label>Password</mat-label>
+                <input 
+                name="username"
+                [(ngModel)]="credentials.password"
+                required minlength="7" maxlength="15" type="password" matInput />
+            </mat-form-field>
     
-    <div class="container text-center" >
-        <button mat-raised-button color="primary">
-            Login
-        </button> 
+                <div class="container text-center" >
+                    <button mat-raised-button color="primary">
+                         Login
+                    </button> 
     
-        <button style="margin-left: 10px" mat-raised-button color="accent"><a >
-            Reset</a>
-            </button>
-    <div class="container mt">
-        <button><a routerLink="/forgot-password">Forgot Password</a></button>
-        <button style="margin-left: 10px;"><a routerLink="/forgot-username">Forgot Username</a></button>
-    </div>
-    </div>
+                    <button style="margin-left: 10px" mat-raised-button color="accent"><a >
+                         Reset</a>
+                    </button>
+    
+                    <div class="container mt">
+                        <button>
+                            <a routerLink="/forgot-password">Forgot Password</a>
+                        </button>
+                        
+                        <button style="margin-left: 10px;">
+                            <a routerLink="/forgot-username">Forgot Username</a>
+                        </button>
+                    </div>
+                </div>
         
      </form>
+<br />
+     <p>
+        {{credentials | json }}
+     </p>
     </div>
 </div>
 </div>
