--- a/src/app/component/signup/signup.component.html
+++ b/src/app/component/signup/signup.component.html
@@ -5,20 +5,30 @@
         <h1><b>Thank you for joinning us!!!!!!</b></h1>
     
         <form action="">
-            <div class="row">
+            <div class="col-sm">
+                <mat-form-field class="full-width" appearance="outline">
+                    <mat-label>Mobile Number</mat-label>
+                    <input type="mobile no"
+                    minlength="10"
+                    required matInput />
+                </mat-form-field> 
+               </div> 
+
+
+                <div class="row">
                 <div class="col-sm">
-                    <mat-form-field>
+                    <mat-form-field class="full-width" appearance="outline">
                         <mat-label>Username</mat-label>
                         <input type="text"
                         required matInput />
                     </mat-form-field>
     
                     
-                       <div class="col-sm">
+                <div class="col-sm">
                         <mat-form-field class="full-width" appearance="outline">
                             <mat-label>Password</mat-label>
                             <input type="password"
-                            minlength="7"
+                            minlength="7" maxlength="15"
                             required matInput />
                         </mat-form-field> 
                        </div> 
@@ -27,12 +37,12 @@
                         <mat-form-field class="full-width" appearance="outline">
                             <mat-label>Confirm Password</mat-label>
                             <input type="password"
-                            minlength="7"
+                            minlength="7" maxlength="15"
                             required matInput />
                         </mat-form-field> 
                        </div>
 
-                       <button mat-raised-button color="primary"><a routerLink="submit">Submit</a></button>
+                       <button mat-raised-button><a routerLink="/login">Submit</a></button>
                     
                 </div>
             </div>
