--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mb{
     margin-bottom: 0px;
 }
+
+.marginals{
+    margin-top: 50px;
+}
